# RayTracer

./: .gitignore  CMakeLists.txt  README.md
include/: color.h  directives.h  ppm.h  ray.h  structs.h  vector.h
src/: a.out  main.c
tests/: _testModule.py  cInterface.py  test.py  testRay.cpp
